--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
+    "@rails/webpacker": "5.4.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
   }
 }
