--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,28 @@
 version: 2.1
+
 jobs:
   build:
     docker:
-      - image: circleci/ruby:3.1.4
-      - image: circleci/node:14
+      - image: circleci/ruby:3.1.4-node
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
-          name: Install Node.js
+          name: Install dependencies
           command: |
-            curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-            sudo apt-get install -y nodejs
+            bundle install
+            yarn install
       - run:
-          name: Bundle Install
-          command: bundle install
+          name: Database setup
+          command: |
+            cp config/database.yml.circleci config/database.yml
+            bundle exec rake db:create db:schema:load
       - run:
-          name: Run Tests
+          name: Run tests
           command: bundle exec rspec
+
+workflows:
+  version: 2
+  test:
+    jobs:
+      - build
