--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,12 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/ruby:3.1.4-node
-    working_directory: ~/repo
+      - image: circleci/ruby:3.1.4-node-browsers
     steps:
       - checkout
       - run:
           name: Install dependencies
-          command: |
-            bundle install
-            yarn install
-      - run:
-          name: Database setup
-          command: |
-            cp config/database.yml.circleci config/database.yml
-            bundle exec rake db:create db:schema:load
+          command: bundle install
       - run:
           name: Run tests
           command: bundle exec rspec
-
-workflows:
-  version: 2
-  test:
-    jobs:
-      - build
