--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/ruby:3.1.4-node-browsers
+      - image: circleci/ruby:3.1.4
     steps:
       - checkout
       - run:
