--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "commonjs",
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@rails/webpacker": "5.4.4",
@@ -9,6 +10,12 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "webpack-dev-server": "^3"
   }
 }
