Herokuにプッシュ

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,13 @@
 version: 2.1
 
-jobs:
-  build:
+executors:
+  ruby-executor:
     docker:
-      - image: cimg/ruby:3.1.4
+      - image: circleci/ruby:3.1.4-node
+
+jobs:
+  test:
+    executor: ruby-executor
     steps:
       - checkout
       - run:
@@ -12,3 +16,9 @@ jobs:
       - run:
           name: Run tests
           command: bundle exec rspec
+
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test
