--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@rails/webpacker": "5.4.4",
+    "axios": "^1.7.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "tailwindcss": "^3.4.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
