--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "type": "commonjs",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-destructuring": "^7.24.7",
+    "@babel/plugin-transform-regenerator": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@rails/webpacker": "5.4.4",
     "axios": "^1.7.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.5.1",
