--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "type": "commonjs",
+  "license": "MIT",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
