--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,36 @@ executors:
   ruby-executor:
     docker:
       - image: cimg/ruby:3.1.4-node
+      - image: circleci/postgres:12.3
+        environment:
+          POSTGRES_USER: myuser
+          POSTGRES_DB: myapp_test
     working_directory: ~/repo
 
 jobs:
   test:
     executor: ruby-executor
+    environment:
+      PGHOST: 127.0.0.1
+      PGUSER: myuser
+      PGPASSWORD: ""
+      RAILS_ENV: test
     steps:
       - checkout
       - run:
           name: Install dependencies
-          command: bundle install
+          command: |
+            bundle install
+            yarn install --check-files
+      - run:
+          name: Wait for PostgreSQL to be ready
+          command: |
+            dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Database setup
+          command: |
+            bundle exec rails db:create
+            bundle exec rails db:schema:load
       - run:
           name: Run tests
           command: bundle exec rspec
