--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ executors:
         environment:
           POSTGRES_USER: myuser
           POSTGRES_DB: myapp_test
+          POSTGRES_PASSWORD: mypassword
     working_directory: ~/repo
 
 jobs:
@@ -16,7 +17,7 @@ jobs:
     environment:
       PGHOST: 127.0.0.1
       PGUSER: myuser
-      PGPASSWORD: ""
+      PGPASSWORD: mypassword
       RAILS_ENV: test
     steps:
       - checkout
