--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@rails/ujs": "^7.1.3-4",
     "@rails/webpacker": "5.4.4",
     "axios": "^1.7.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
