--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.5.1",
     "prop-types": "^15.8.1",
